Aggiunta prima destinazione
aggiunte le immagini delle varie destinazioni + aggiunta prima destinazione

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <body>
     <div class="menu">
 
-      <div class="travel">
+      <div class="travel box1">
 
       </div>
 
-      <div class="travel">
+      <div class="travel box2">
 
       </div>
-      
-      <div class="travel">
+
+      <div class="travel box3">
 
       </div>
 
