Aggiunta scritta città centrata primo box

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="menu">
 
       <div class="travel box1">
-
+        <span>ROMA</span>
       </div>
 
       <div class="travel box2">
