Aggiunta scritta + immagine per tutte le destinazioni

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
       </div>
 
       <div class="travel box2">
-
+        <span>COPENHAGEN</span>
       </div>
 
       <div class="travel box3">
-
+        <span>TOKYO</span>
       </div>
 
     </div>
