Fix problema taglio con ridimensionamento pagina

--- a/index.html
+++ b/index.html
@@ -6,20 +6,22 @@
     <title>Airbnb</title>
   </head>
   <body>
-    <div class="menu">
-      <div class="travel box1">
-        <span>ROMA</span>
-        <div class="opacity">
+    <div class="container">
+      <div class="menu">
+        <div class="travel box1">
+          <span>ROMA</span>
+          <div class="opacity">
+          </div>
         </div>
-      </div>
-      <div class="travel box2">
-        <span>COPENHAGEN</span>
-        <div class="opacity">
+        <div class="travel box2">
+          <span>COPENHAGEN</span>
+          <div class="opacity">
+          </div>
         </div>
-      </div>
-      <div class="travel box3">
-        <span>TOKYO</span>
-        <div class="opacity">
+        <div class="travel box3">
+          <span>TOKYO</span>
+          <div class="opacity">
+          </div>
         </div>
       </div>
     </div>
